[tool.poetry]
name = "workshop-rag-eval-qdrant-arize"
version = "0.1.0"
description = ""
authors = ["atita arora <atitaarora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arize-phoenix = "^3.19"
arize-phoenix-evals = "^0.6.0"
llama-index-callbacks-arize-phoenix = "^0.1.4"
llama-index-packs-arize-phoenix-query-engine = "^0.1.4"
llama-index = "^0.10.26"
qdrant-client = "^1.8.2"
openai = "^1.16.1"
datasets = "^2.18.0"
llama-index-vector-stores-qdrant = "^0.1.5"
llama-index-llms-openai = "^0.1.14"
llama-index-embeddings-openai = "^0.1.7"
langchain = "^0.1.14"
llama-index-embeddings-fastembed = "^0.1.4"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
fastembed = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
